--- a/limpygnome/nbproject/project.properties
+++ b/limpygnome/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -28,23 +29,48 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.antlr-2.7.7.jar=web/WEB-INF/libs/hibernate/antlr-2.7.7.jar
+file.reference.dom4j-1.6.1.jar=web/WEB-INF/libs/hibernate/dom4j-1.6.1.jar
 file.reference.freemarker.jar=web/WEB-INF/libs/freemarker.jar
+file.reference.hibernate-commons-annotations-4.0.5.Final.jar=web/WEB-INF/libs/hibernate/hibernate-commons-annotations-4.0.5.Final.jar
+file.reference.hibernate-core-4.3.7.Final.jar=web/WEB-INF/libs/hibernate/hibernate-core-4.3.7.Final.jar
+file.reference.hibernate-entitymanager-4.3.7.Final.jar=web/WEB-INF/libs/hibernate/hibernate-entitymanager-4.3.7.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=web/WEB-INF/libs/hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.jandex-1.1.0.Final.jar=web/WEB-INF/libs/hibernate/jandex-1.1.0.Final.jar
+file.reference.javassist-3.18.1-GA.jar=web/WEB-INF/libs/hibernate/javassist-3.18.1-GA.jar
+file.reference.jboss-logging-3.1.3.GA.jar=web/WEB-INF/libs/hibernate/jboss-logging-3.1.3.GA.jar
+file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=web/WEB-INF/libs/hibernate/jboss-logging-annotations-1.2.0.Beta1.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=web/WEB-INF/libs/hibernate/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.mysql-connector-java-5.1.34-bin.jar=web/WEB-INF/libs/mysql-connector-java-5.1.34-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-spdy.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.freemarker.jar}
+    ${file.reference.freemarker.jar}:\
+    ${file.reference.mysql-connector-java-5.1.34-bin.jar}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-4.0.5.Final.jar}:\
+    ${file.reference.hibernate-core-4.3.7.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.jandex-1.1.0.Final.jar}:\
+    ${file.reference.javassist-3.18.1-GA.jar}:\
+    ${file.reference.jboss-logging-3.1.3.GA.jar}:\
+    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-4.3.7.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.hibernate-persistencemodelgen.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
