--- a/limpygnome/nbproject/project.properties
+++ b/limpygnome/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.antlr-2.7.7.jar=web/WEB-INF/libs/hibernate/antlr-2.7.7.jar
+file.reference.commons-compress-1.9.jar=web/WEB-INF/libs/commons-compress-1.9.jar
 file.reference.dom4j-1.6.1.jar=web/WEB-INF/libs/hibernate/dom4j-1.6.1.jar
 file.reference.freemarker.jar=web/WEB-INF/libs/freemarker.jar
 file.reference.hibernate-commons-annotations-4.0.5.Final.jar=web/WEB-INF/libs/hibernate/hibernate-commons-annotations-4.0.5.Final.jar
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.jboss-logging-3.1.3.GA.jar}:\
     ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
-    ${file.reference.hibernate-entitymanager-4.3.7.Final.jar}
+    ${file.reference.hibernate-entitymanager-4.3.7.Final.jar}:\
+    ${file.reference.commons-compress-1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
