--- a/limpygnome/nbproject/project.properties
+++ b/limpygnome/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.javassist-3.18.1-GA.jar=web/WEB-INF/libs/hibernate/javassist-3.18
 file.reference.jboss-logging-3.1.3.GA.jar=web/WEB-INF/libs/hibernate/jboss-logging-3.1.3.GA.jar
 file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=web/WEB-INF/libs/hibernate/jboss-logging-annotations-1.2.0.Beta1.jar
 file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=web/WEB-INF/libs/hibernate/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.joda-time-2.6.jar=web/WEB-INF/libs/joda-time-2.6.jar
 file.reference.mysql-connector-java-5.1.34-bin.jar=web/WEB-INF/libs/mysql-connector-java-5.1.34-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -65,7 +66,8 @@ javac.classpath=\
     ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
     ${file.reference.hibernate-entitymanager-4.3.7.Final.jar}:\
-    ${file.reference.commons-compress-1.9.jar}
+    ${file.reference.commons-compress-1.9.jar}:\
+    ${file.reference.joda-time-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
