--- a/limpygnome-war/pom.xml
+++ b/limpygnome-war/pom.xml
@@ -56,6 +56,16 @@
 	
 	<build>
 		<plugins>
+
+			<!-- Java Configuration -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
 		
 			<!-- Automatic generation of schema -->
 			<plugin>
