Improving usage of HTML5 tags, contact page added.

--- a/limpygnome-war/src/main/webapp/WEB-INF/web.xml
+++ b/limpygnome-war/src/main/webapp/WEB-INF/web.xml
@@ -43,4 +43,12 @@
         <session-timeout>30</session-timeout>
     </session-config>
 
+    <!-- JSP config -->
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <trim-directive-whitespaces>true</trim-directive-whitespaces>
+        </jsp-property-group>
+    </jsp-config>
+
 </web-app>
