--- a/limpygnome-war/pom.xml
+++ b/limpygnome-war/pom.xml
@@ -66,6 +66,13 @@
             <version>3.0.5</version>
         </dependency>
 
+        <!-- Joda (datetime) -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
