Partially migrated music and timeline. Both need corrections for older CSS classes. Songs player is a broken mess.

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -22,6 +22,8 @@ assets:
   assets:
     - "layout.css"
     - "icomoon/style.css"
+    - "timeline/style.css"
+    - "music/music-player.js"
   sources:
     - assets
 
