More general progress with project section and posts.

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -20,9 +20,7 @@ assets:
   autowrite: true
   prefix: "/assets"
   assets:
-    - "layout.css"
-    - "icomoon/style.css"
-    - "timeline/style.css"
+    - "style.css"
     - "music/music-player.js"
   sources:
     - assets
