Alerts working, but need to automate CloudFront alarm.

--- a/aws/cloud-formation/cloudwatch-alerts-us-east-1.json
+++ b/aws/cloud-formation/cloudwatch-alerts-us-east-1.json
@@ -16,6 +16,10 @@
             "Type" : "String",
             "Description" : "The e-mail to receive alerts",
             "Default" : "limpygnome@gmail.com"
+        },
+        "DistributionId" : {
+            "Type" : "String",
+            "Description" : "The DistributionId of the CloudFront instance to monitor."
         }
     },
     "Resources" : {
@@ -69,6 +73,17 @@
 
                 "Namespace" : "AWS/CloudFront",
                 "MetricName" : "Requests",
+                "Dimensions" :
+                [
+                    {
+                        "Name" : "Region",
+                        "Value" : "Global",
+                    },
+                    {
+                        "Name" : "DistributionId",
+                        "Value" : { "Ref" : "DistributionId" }
+                    }
+                ],
 
                 "Statistic" : "Sum",
                 "Period" : 1800,
