Progress with Ansible - should work, needs testing. Not sure about location of keys.

--- a/aws/ansible/roles/setup/tasks/main.yml
+++ b/aws/ansible/roles/setup/tasks/main.yml
@@ -5,6 +5,11 @@
     state: "present"
     region: "eu-west-1"
     template: "{{ aws_root }}/cloud-formation/eu-west-1/s3-cloudfront-route53.json"
+    aws_access_key: "{{ aws_access_key }}"
+    aws_secret_key: "{{ aws_secret_key }}"
+  args:
+    template_parameters:
+      DomainName: "limpygnome.co.uk"
   register: stack_website
 
 - name: Create alarms
@@ -14,6 +19,8 @@
     state: "present"
     region: "us-east-1"
     template: "{{ aws_root }}/cloud-formation/us-east-1/alarms-billing-cloudfront.json"
+    aws_access_key: "{{ aws_access_key }}"
+    aws_secret_key: "{{ aws_secret_key }}"
   args:
     template_parameters:
       DistributionId: "{{ stack_website.stack_outputs.DistributionId }}"
