Copying files to s3 working. Need to re-test cloudformation template change for SSL on CloudFront.

--- a/aws/ansible/roles/setup/tasks/main.yml
+++ b/aws/ansible/roles/setup/tasks/main.yml
@@ -10,6 +10,7 @@
   args:
     template_parameters:
       DomainName: "limpygnome.co.uk"
+      AcmCertificateArn: "arn:aws:acm:us-east-1:377402336124:certificate/5a0bfc8a-2201-4af4-aab2-1f7345c89ddc"
   register: stack_website
 
 - name: Create alarms
