Copy files now has param for s3cmd to invalidate changed files on CloudFront.

--- a/aws/ansible/roles/copy-files/tasks/main.yml
+++ b/aws/ansible/roles/copy-files/tasks/main.yml
@@ -6,6 +6,6 @@
   connection: local
   shell: >
        s3cmd sync "{{ aws_root }}/../website/_site/" "s3://limpygnome.co.uk/"
-       --acl-public --no-mime-magic --guess-mime-type
+       --acl-public --no-mime-magic --guess-mime-type --cf-invalidate
        --bucket-location=eu-west-1
        --access_key={{ aws_access_key }} --secret_key={{ aws_secret_key }}
