Few fixes for AWS, still issues around DNS.

--- a/aws/ansible/roles/copy-files/tasks/main.yml
+++ b/aws/ansible/roles/copy-files/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: Sync website files with s3 bucket
   connection: local
   shell: >
-       s3cmd sync "{{ aws_root }}/../website/_site/" "s3://limpygnome.co.uk/"
+       s3cmd sync "{{ aws_root }}/../website/_site/" "s3://{{ PrimaryDomainName }}/"
        --acl-public --no-mime-magic --guess-mime-type --cf-invalidate
        --bucket-location=eu-west-1
        --access_key={{ aws_access_key }} --secret_key={{ aws_secret_key }}
@@ -13,7 +13,7 @@
 - name: Sync public files with s3 bucket
   connection: local
   shell: >
-       s3cmd sync "{{ aws_root }}/../public-files/" "s3://public.limpygnome.co.uk/"
+       s3cmd sync "{{ aws_root }}/../public-files/" "s3://public.{{ PrimaryDomainName }}/"
        --acl-public --no-mime-magic --guess-mime-type
        --bucket-location=eu-west-1
        --access_key={{ aws_access_key }} --secret_key={{ aws_secret_key }}
