--- a/aws/ansible/roles/setup/tasks/main.yml
+++ b/aws/ansible/roles/setup/tasks/main.yml
@@ -9,9 +9,10 @@
     aws_secret_key: "{{ aws_secret_key }}"
   args:
     template_parameters:
-      DomainName: "limpygnome.com"
-      SecondaryDomainName: "limpygnome.co.uk"
-      AcmCertificateArn: "arn:aws:acm:us-east-1:377402336124:certificate/5a0bfc8a-2201-4af4-aab2-1f7345c89ddc"
+      PrimaryDomainName: "{{ PrimaryDomainName }}"
+      PrimaryDomainAcmCertificateArn: "{{ PrimaryDomainAcmCertificateArn }}"
+      SecondaryDomainName: "{{ SecondaryDomainName }}"
+      SecondaryDomainAcmCertificateArn: "{{ SecondaryDomainAcmCertificateArn }}"
   register: stack_website
 
 - name: Create alarms
