--- a/website/_config.yml
+++ b/website/_config.yml
@@ -9,6 +9,7 @@ gems:
   - jekyll-assets
   - jekyll-paginate
   - jekyll-sitemap
+
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -27,6 +28,7 @@ assets:
 # Posts
 permalink: pretty
 paginate: 5
+paginate_path: "page:num"
 excerpt_separator: "#"
 
 # Collections
