--- a/aws/ansible/roles/website-files/tasks/main.yml
+++ b/aws/ansible/roles/website-files/tasks/main.yml
@@ -6,6 +6,6 @@
   connection: local
   shell: >
        s3cmd sync "{{ aws_root }}/../website/_site/" "s3://{{ ObjectAlias }}/"
-       --acl-public --no-mime-magic --guess-mime-type --cf-invalidate
+       --acl-public --no-mime-magic --guess-mime-type --cf-invalidate --delete-removed
        --bucket-location=eu-west-1
        --access_key={{ aws_access_key }} --secret_key={{ aws_secret_key }}
