--- a/website/_config.yml
+++ b/website/_config.yml
@@ -1,6 +1,6 @@
 # Site location
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://limpygnome.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://marcuscraske.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
