Minor accessibility fixes, moving towards webp, minor article updates, upgrading dependencies, start of new smart house article.

--- a/website/Gemfile
+++ b/website/Gemfile
@@ -27,4 +27,5 @@ gem "jekyll-assets"
 gem "jekyll-paginate"
 gem "jekyll-asset-pipeline"
 gem "yui-compressor"
-gem 'jekyll-sitemap'
+gem "jekyll-sitemap"
+gem "jekyll-webp"
