--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "3.6.0",
-    "jscroll": "2.4.1"
+    "jscroll": "2.4.1",
+    "uglify-js": "^3.17.4"
   }
 }
